--- a/static/styles.css
+++ b/static/styles.css
@@ -4,6 +4,79 @@ h1{
 
 
 img{
-  width: 100px;
-  height: 50px
+  width: 300px;
+  height: 300px
+}
+.body {
+  background-color: white;
+}
+
+#student-image {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.table {
+  align-items: center;
+  align-self: center;
+  width: 600px;
+}
+
+.navbar {
+  background-color: #333; /* Background color */
+  overflow: hidden; /* Ensure links stay in line */
+  align-items: center;
+}
+
+.navbar a {
+  float: left; /* Float the links to the left */
+  display: block; /* Make the links block elements */
+  color: white; /* Text color */
+  text-align: center; /* Center-align text */
+  padding: 14px 16px; /* Padding around the links */
+  text-decoration: none; /* Remove default underline */
+}
+
+.navbar a:hover {
+  background-color: #ddd; /* Background color on hover */
+  color: black; /* Text color on hover */
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+button:hover {
+  background-color: #0056b3;
+}
+
+.card {
+  background-color: pink;
+  color: orange-red;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 800px;
+  text-align: center;
+}
+
+table {
+  width: 50%;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+th {
+  background-color: #f2f2f2;
 }
