--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -10,37 +10,31 @@
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
         }
         .navbar {
-            background-color: #333; /* Background color */
-            overflow: hidden; /* Ensure links stay in line */
-            align-items: center;
-          }
-          
-          .navbar a {
-            float: left; /* Float the links to the left */
-            display: block; /* Make the links block elements */
-            color: white; /* Text color */
-            text-align: center; /* Center-align text */
-            padding: 14px 16px; /* Padding around the links */
-            text-decoration: none; /* Remove default underline */
-          }
-          
-          .navbar a:hover {
-            background-color: #ddd; /* Background color on hover */
-            color: black; /* Text color on hover */
-          }
-          
+            background-color: #333;
+            overflow: hidden;
+        }
+        .navbar a {
+            float: center;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
         .container {
             text-align: center;
             background-color: #fff;
             padding: 40px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+            max-width: 600px;
         }
         h1 {
             color: #333;
@@ -74,8 +68,8 @@
         <a href="{% url 'index' %}" src="" alt=  "">HOME </a>
         <a href="{% url 'facts' %}" src="" alt=  "">FACTS </a>
         <a href="{% url 'students' %}" src="" alt=  "">STUDENT PORTAL </a>
-        
-    </div><br><br>
+    </div>
+
     <div class="container">
         <h1>Random Dogs Images</h1>
         <p>Click the button to get a random dog image</p>
@@ -84,4 +78,3 @@
     </div>
 </body>
 </html>
-
