--- a/templates/index.html
+++ b/templates/index.html
@@ -1,44 +1,61 @@
-{% load static%}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{% static 'styles.css'%}">
-  <title>Home</title>
-<style>
-    .navbar {
-        background-color: #333; /* Background color */
-        overflow: hidden; /* Ensure links stay in line */
-        align-items: center;
-      }
-      
-      .navbar a {
-        float: left; /* Float the links to the left */
-        display: block; /* Make the links block elements */
-        color: white; /* Text color */
-        text-align: center; /* Center-align text */
-        padding: 14px 16px; /* Padding around the links */
-        text-decoration: none; /* Remove default underline */
-      }
-      
-      .navbar a:hover {
-        background-color: #ddd; /* Background color on hover */
-        color: black; /* Text color on hover */
-      }
-</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <title>Home</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .container {
+            text-align: center;
+        }
+
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+            align-items: center;
+        }
+
+        .navbar a {
+            float: center;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+    </style>
 </head>
 <body>
-    <div class="navbar">
-        <a href="{% url 'facts' %}" src="" alt=  "">FACTS </a>
-        <a href="{% url 'students' %}" src="" alt=  "">STUDENT PORTAL </a>
-        <a href="{% url 'dogs' %}" src="" alt=  "">DOGS </a>
-    </div>
-  <div class = "card">
-    <h3>WELCOME TO THIS AMAZING PAGE</h3>
-    <p>This is a page where you can find facts about dogs and students.</p>
-    <p>To navigate to the the pages you need to click on the navigation bar.</p>
+    <div class="container">
+        <div class="navbar">
+            <a href="{% url 'facts' %}" src="" alt=  "">FACTS</a>
+            <a href="{% url 'students' %}" src="" alt=  "">STUDENT PORTAL</a>
+            <a href="{% url 'dogs' %}" src="" alt=  "">DOGS</a>
+        </div>
 
+        <div class="card">
+            <h3>WELCOME TO THIS AMAZING PAGE</h3>
+            <p>This is a page where you can find facts about dogs and students.</p>
+            <p>To navigate to the the pages you need to click on the navigation bar.</p>
+        </div>
+    </div>
 </body>
 </html>
+
