--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -14,7 +14,15 @@
         .navbar {
             background-color: #333;
             overflow: hidden;
-        }
+            width: 700px;
+            height: 50px;
+            margin: 0 auto; /* Center the navbar horizontally */
+            border-radius: 10px;
+            text-align: center;
+            display: flex; /* Use flexbox to center vertically */
+            justify-content: center; /* Center items horizontally */
+            align-items: center; /* Center items vertically */
+          }
         .navbar a {
             float: center;
             display: block;
@@ -23,6 +31,8 @@
             padding: 14px 16px;
             text-decoration: none;
         }
+
+        
         .navbar a:hover {
             background-color: #ddd;
             color: black;
