--- a/templates/index.html
+++ b/templates/index.html
@@ -24,12 +24,19 @@
         .navbar {
             background-color: #333;
             overflow: hidden;
-            align-items: center;
+            width: 700px;
+            height: 50px;
+            margin: 0 auto; /* Center the navbar horizontally */
+            border-radius: 10px;
+            text-align: center;
+            display: flex; /* Use flexbox to center vertically */
+            justify-content: center; /* Center items horizontally */
+            align-items: center; /* Center items vertically */
         }
 
         .navbar a {
             float: center;
-            display: block;
+           
             color: white;
             text-align: center;
             padding: 14px 16px;
@@ -48,11 +55,11 @@
             <a href="{% url 'facts' %}" src="" alt=  "">FACTS</a>
             <a href="{% url 'students' %}" src="" alt=  "">STUDENT PORTAL</a>
             <a href="{% url 'dogs' %}" src="" alt=  "">DOGS</a>
-        </div>
+        </div><br><br>
 
         <div class="card">
             <h3>WELCOME TO THIS AMAZING PAGE</h3>
-            <p>This is a page where you can find facts about dogs and students.</p>
+            <p>This is a page where you can find fun facts, random dogs images and students.</p>
             <p>To navigate to the the pages you need to click on the navigation bar.</p>
         </div>
     </div>
