--- a/templates/portal.html
+++ b/templates/portal.html
@@ -15,7 +15,7 @@
         <a href="{% url 'index' %}" src="" alt=  "">HOME </a>
         <a href="{% url 'facts' %}" src="" alt=  "">FACTS </a>
         <a href="{% url 'dogs' %}" src="" alt=  "">DOGS </a>
-    </div>
+    </div><br>
 
     <div class = "card ">
         <h1>Random Student</h1>
@@ -53,7 +53,7 @@
                 <td>Address</td>
                 <td id="address"></td>
             </tr>
-        </table>
+        </table><br>
         <button id="reload-btn">Reload Data</button>
 
         <script>
@@ -68,9 +68,9 @@
                         document.getElementById('courses').innerText = randomStudent.courses;
                         document.getElementById('gpa').innerText = randomStudent.gpa;
                         document.getElementById('email').innerText = randomStudent.email;
-                        document.getElementById('address').innerText = randomStudent.address;
+                        //document.getElementById('address').innerText = randomStudent.address;
                         
-                        // Fetch a random image URL from the API (replace 'image' with the actual key for image URL)
+                        // Fetch a random image URL from the API 
                         const imageUrl = randomStudent.image;
                         document.getElementById('student-image').src = imageUrl;
                     });
