Added a few comments to my code

--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -16,13 +16,13 @@
             overflow: hidden;
             width: 700px;
             height: 50px;
-            margin: 0 auto; /* Center the navbar horizontally */
+            margin: 0 auto; 
             border-radius: 10px;
             text-align: center;
-            display: flex; /* Use flexbox to center vertically */
-            justify-content: center; /* Center items horizontally */
-            align-items: center; /* Center items vertically */
-          }
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+        }
         .navbar a {
             float: center;
             display: block;
@@ -83,7 +83,7 @@
     <div class="container">
         <h1>Random Dogs Images</h1>
         <p>Click the button to get a random dog image</p>
-        <img src="{{dog}}" alt=""><br><br>
+        <img src="{{dog}}" alt=""><br><br> //
         <button onclick="window.location.reload();">Next Dog</button>
     </div>
 </body>
