made changes to the buttons

--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -31,7 +31,6 @@
             padding: 14px 16px;
             text-decoration: none;
         }
-
         
         .navbar a:hover {
             background-color: #ddd;
@@ -83,8 +82,8 @@
     <div class="container">
         <h1>Random Dogs Images</h1>
         <p>Click the button to get a random dog image</p>
-        <img src="{{dog}}" alt=""><br><br> //
-        <button onclick="window.location.reload();">Next Dog</button>
+        <img src="{{dog}}" alt=""><br><br>
+        <button onclick="window.location.reload();">Next Dog</button> 
     </div>
 </body>
 </html>
