--- a/templates/facts.html
+++ b/templates/facts.html
@@ -72,7 +72,7 @@
     <div class="container">
         <h1>Random Fact</h1>
         <p>{{ fact }}</p>
-        <button onclick="window.location.reload();">Next Fact</button>
+        <button onclick="window.location.reload();">Random Fact</button>
     </div>
 </body>
 </html>
